feat: 이미지 처리
* feat: Image 엔티티 수정 및 뼈대 코드 작성

* refactor: 테스트 정상 동작하도록 수정

* feat: ImageHandler 로직 수정 및 컨트롤러 수정

* feat: 이미지 좌표 추줄 기능 구현

* feat: `BaseEntity` 수정 및 `ImageController` 구현

* refactor: audit 설정 분리

* feat: 예외 핸들러 추가

* fix: audit 설정 재분리

* fix: 기존 테스트 성공하도록 수정

* refactor: 프로파일에 따른 이미지 경로 주입 구현 및 리팩터링

* refactor: `BaseEntity` 롤백 및 `ImageHandler`의 `upload` 메서드 네이밍 수정

* refactor: 피드백 반영

* refactor: 컨플릭트 합병 후 보정 및 이미지 저장 경로를 상대경로로 수정