@@ -1,7 +1,11 @@
 package keepsake.ourmemory.application.memory;
 
+import keepsake.ourmemory.application.repository.MemoryRepository;
 import keepsake.ourmemory.domain.memory.Category;
+import keepsake.ourmemory.domain.memory.Content;
+import keepsake.ourmemory.domain.memory.Memory;
 import keepsake.ourmemory.domain.memory.Star;
+import keepsake.ourmemory.domain.memory.Title;
 import keepsake.ourmemory.ui.dto.request.MemoryCreateRequest;
 import keepsake.ourmemory.ui.dto.response.MemoriesResponse;
 import keepsake.ourmemory.ui.dto.response.SingleMemoryResponse;
@@ -10,7 +14,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.IOException;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -18,18 +24,19 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 
 @Transactional
 @SpringBootTest
-class MemoryServiceTest {
+public class MemoryServiceTest {
     @Autowired
     private MemoryService memoryService;
+    @Autowired
+    private MemoryRepository memoryRepository;
 
     @Test
-    @Transactional
-    void 추억을_조회한다() {
+    void 추억을_조회한다() throws IOException {
         // given
-        MemoryCreateRequest request1 = new MemoryCreateRequest("title1", Category.CAFE.getCategoryName(), LocalDateTime.now(), Star.TWO.getValue(), "content1", List.of("image"));
-        MemoryCreateRequest request2 = new MemoryCreateRequest("title2", Category.RESTAURANT.getCategoryName(), LocalDateTime.now(), Star.FIVE.getValue(), "content2", List.of("image"));
-        memoryService.createMemory(1L, request1);
-        memoryService.createMemory(1L, request2);
+        final Memory memory1 = new Memory(1L, new Title("title1"), Category.CAFE, LocalDateTime.now(), Star.TWO, new Content("content1"));
+        final Memory memory2 = new Memory(1L, new Title("title2"), Category.RESTAURANT, LocalDateTime.now(), Star.FIVE, new Content("content2"));
+        memoryRepository.save(memory1);
+        memoryRepository.save(memory2);
 
         // when
         final MemoriesResponse memories = memoryService.getMemories(1L);
@@ -46,9 +53,9 @@ class MemoryServiceTest {
 
     @Test
     @Transactional
-    void 하나의_추억을_조회한다() {
+    void 하나의_추억을_조회한다() throws IOException {
         // given
-        MemoryCreateRequest request = new MemoryCreateRequest("title1", Category.CAFE.getCategoryName(), LocalDateTime.now(), Star.TWO.getValue(), "content1", List.of("image"));
+        MemoryCreateRequest request = new MemoryCreateRequest("title1", Category.CAFE.getCategoryName(), LocalDateTime.now(), Star.TWO.getValue(), "content1", Collections.emptyList());
         Long memoryId = memoryService.createMemory(1L, request);
 
         // when
